# template

./: .env.example  .gitignore  docker-compose.yml  generate-env.sh  nginx.conf  test.http
api/: Cargo.toml  Dockerfile  wait-for-db.sh
api/migrations/: 20250301150609_create_users_table.sql  20250301151051_create_tasks_table.sql
api/src/: main.rs
api/src/app/: config.rs  middlewares.rs  mod.rs  routes.rs  server.rs
api/src/tasks/: entity.rs  handler.rs  mod.rs  route.rs
api/src/users/: entity.rs  handler.rs  route.rs
certs/: cert.key  cert.pem
