[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
